# aa

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: accelerate.yml  build.yml  mkl.yml  publish.yml  valgrind.yml  windows-c.yml
examples/: gd.c
include/: aa.h  aa_blas.h
python/: aa.ipynb  aa1s.py  aapy.c  aapy.pyx  example.py  example_aa1s.py  example_admm.py  example_lsgd.py  example_qpgd.py  example_qpgd_debug.py  plot_convergence.py  precond.py  scs_fx.py  setup.py  test_aa.py
scripts/: check_gd_convergence.sh
src/: aa.c  accel.c
test/: check_gd_convergence.sh  minunit.h  run_tests.c
tests/c/: bench.c  gd.c  minunit.h  run_tests.c
tests/python/: bench.py  test_aa.py  test_wheel.py
