[build-system]
# setuptools>=77 is needed for PEP 639 license parsing (bare
# `license = "MIT"` below); it pulls in packaging>=24.2 transitively.
requires = ["setuptools>=77", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
# Keep these in sync with setup.py, which duplicates them for legacy
# setuptools/editable-install code paths.
name = "anderson-acceleration"
version = "0.0.2"
description = "Anderson acceleration for fixed-point iterations"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{ name = "Brendan O'Donoghue", email = "bodonoghue85@gmail.com" }]
keywords = [
    "anderson-acceleration",
    "fixed-point",
    "optimization",
    "numerical",
    "blas",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/cvxgrp/aa"
Repository = "https://github.com/cvxgrp/aa"
Issues = "https://github.com/cvxgrp/aa/issues"
Paper = "https://web.stanford.edu/~boyd/papers/nonexp_global_aa1.html"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux* pp* *-win32 *-manylinux_i686"
build-verbosity = 1
# Run the real smoke test against each built wheel, in a fresh venv that does
# NOT contain the project source — guarantees we are exercising the installed
# wheel, not a shadowed import from cwd.
test-requires = ["numpy"]
test-command = "python {project}/tests/python/test_wheel.py"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
archs = ["x86_64"]
before-all = "yum install -y openblas-devel lapack-devel"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
# Accelerate ships with macOS — nothing to install.

[tool.cibuildwheel.windows]
archs = ["AMD64"]
# OPENBLAS_ROOT is set by the publish workflow; setup.py reads it to
# locate include/ and lib/. The delvewheel repair command is injected
# via CIBW_REPAIR_WHEEL_COMMAND_WINDOWS in the workflow — cibuildwheel
# v3 dropped the `{env:...}` placeholder, so the workflow resolves the
# path at template-expansion time instead.
before-build = "pip install delvewheel"
